WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285938
[WebGPU] fast math leads to invalid code gen
https://bugs.webkit.org/show_bug.cgi?id=285938
Summary
[WebGPU] fast math leads to invalid code gen
Mike Wyrzykowski
Reported
2025-01-14 13:35:50 PST
[WebGPU] fast math leads to invalid code gen
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-14 13:36:08 PST
<
rdar://problem/142906182
>
Mike Wyrzykowski
Comment 2
2025-01-14 13:40:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39018
EWS
Comment 3
2025-01-15 10:12:07 PST
Committed
288947@main
(2891d44f1969): <
https://commits.webkit.org/288947@main
> Reviewed commits have been landed. Closing PR #39018 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug