[WebGPU] fast math leads to invalid code gen https://bugs.webkit.org/show_bug.cgi?id=285938 rdar://142906182

Reviewed by Tadeu Zagallo.

It is too easy to generate MSL with -ffmast-math which LLVM optimizes
more agressively than expected, due to LLVM being able
to prove a certain expression is Inf or NaN and can therefore
be discarded under fast math optimization rules.

Instead, use relaxed math which honors NaNs and Infs but still
largely preserves performance.

* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::ShaderModule::createLibrary):

Canonical link: https://commits.webkit.org/288947@main